Facades/js/openui5.template.css
/* ... */
/* Fullscreen */
.fullscreen {position: fixed!important; top: 0; left: 0; padding: 0; width: 100vw!important; height: 100vh!important; background: rgba(255,255,255);}
.sapUiRespGrid.fullscreen > .sapUiRespGridSpanS12 {height: 100%}
/* Fullscreen Scheduler */
.fullscreen > .sapMITBContent {padding: 0; height: 100%; max-height: 100vh;}

/* SegmentedButtons */
.segmentedButtonsError {border-color: #b00 !important; border-width: 2px !important; color: #b00 !important;}

/* Gantt */
.exf-gantt .gantt-container {height: 100%; overflow-y: hidden;}
.exf-gantt .gantt .tick {stroke: #ddd}
.bar-folder {filter: drop-shadow(0px -3px 0px rgb(0 0 0 / 0.8))}

/* Scheduler */
/* Decrease height of sing-line rows */
.sapMPlanCal.halfHeight>.sapMList>table>tbody>tr>td>.sapUiCalendarRow:not(.sapMPlanCalRowLarge)>.sapUiCalendarRowApps {
    min-height: max(2rem, 100%);
}
.sapMPlanCal.halfHeight>.sapMList .sapMListTblCell.sapMPlanCalAppRow {height: inherit;}
.sapMPlanCal.halfHeight>.sapMList .sapMPlanCalAppRow>.sapUiCalendarRow {height: 100%}
/* Stick headers + scrolling */
.sapMPlanCal.sapMPCSticky > .sapMList > .sapMListInfoTBarContainer {top: 0 !important;} 
.sapMPlanCal.sapMPCSticky > .sapMList {overflow: auto;}
/* Nav buttons */
.sapMBtn.exf-scheduler-nav {position: absolute; padding: 0;}
.sapMBtn.exf-scheduler-nav > span {height: 100%}
.sapMBtn.exf-scheduler-nav > span > .sapMBtnIcon {margin-top:auto; margin-bottom:auto; color: transparent;}
.sapMBtn.exf-scheduler-nav:hover > span > .sapMBtnIcon {color: initial;}
.sapMBtn.exf-scheduler-navleft {left: -8px;}
.sapMBtn.exf-scheduler-navright {right: 0;}
.exf-scheduler-head-year {font-weight: bold}

/* SVG icons. Color filters computed via https://isotropic.co/tool/hex-color-to-css-filter/ */
.sapMBtn.exf-svg-icon > .sapMBtnInner > .sapMImg {height: 18px; margin-top: auto; margin-bottom: auto;}
.sapMBtn.exf-svg-icon > .sapMBtnInner > .sapMImg {filter:  invert(17%) sepia(90%) saturate(2858%) hue-rotate(198deg) brightness(92%) contrast(94%)}
.sapMBtn.exf-svg-icon > .sapMBtnInner.sapMBtnEmphasized > .sapMImg {filter: invert(100%) sepia(0%) saturate(7500%) hue-rotate(224deg) brightness(105%) contrast(103%);}
.sapMBtn.exf-svg-icon > .sapMBtnInner.sapMBtnActive > .sapMImg {filter: invert(100%) sepia(100%) saturate(0%) hue-rotate(1deg) brightness(107%) contrast(101%);}
.sapMTileCntContent > .sapMImageContent > img {width: 1.75rem; padding-bottom: 0.6rem; padding-top: 0.075rem;}
/* SVG filter for color #5a7da0 */
.sapMTileCntContent > .sapMImageContent > img {filter: invert(47%) sepia(36%) saturate(427%) hue-rotate(169deg) brightness(92%) contrast(94%);}
.sapUiIcon.exf-svg-icon::before {padding-top: 1px; width: 16px; display: block; margin-left: auto; margin-right: auto;}
.sapUiTableCellInner > .sapUiIcon::before {padding-top: 2px}
/* SVG icon for sap.ui.table.Table columns */ 
.sapUiLbl.exf-svg-icon .sapUiLblIco {height: 18px; margin-top: auto; margin-bottom: auto;}
.sapUiLbl.exf-svg-icon:not(.exf-svg-colored) .sapUiLblIco {filter: brightness(0) saturate(100%) invert(19%) sepia(1%) saturate(3230%) hue-rotate(174deg) brightness(105%) contrast(97%);}
.sapUiLbl.exf-icon-only > img {margin-right: 0; height: 22px !important}

/* set placeholder icon invisible, if icon is css injected */
.exf-svg-icon[class^="exf-injected-icon"],
.exf-svg-icon[class*=" exf-injected-icon"] {
    color: transparent;
}

/* NavTiles IconTabBar & SearchFilter */
.customHeader {
    box-shadow: none;
} 

/* set the toolbar sticky/to the top of the control */
.navTilesToolbar {
    z-index: 10;
    background: var(--sapBackgroundColor);
    position: sticky;
    top: 0;
    width: 100%;
    height: auto;
    min-height: 2.75rem;
    overflow: visible;
}

.navTilesToolbar .sapMBarChild,
.navTilesToolbar .sapMBarChildWrapper,
.navTilesToolbar .sapMITH,
.navTilesToolbar .sapMITHWrapper {
    /* otherwise parts of the tabBar (the selected inicators) are clipped */
    height: 100%;
    overflow: visible;
    border-bottom: solid .0625rem var(--sapGroup_TitleBorderColor);
}

.navTilesToolbar .exf-navtiles-tab-header {
    min-width: 14rem;
    max-width: none;
    flex: 1 1 14rem;
}

.navTilesToolbar .exf-navtiles-search {
    width: 18rem;
    min-width: 18rem;
    flex: 0 0 18rem;
    border-bottom: none;
    padding-top: 0.5rem;
}

/* todo: fix mobile */
@media (max-width: 1024px) {
    .navTilesToolbar {
        flex-wrap: nowrap;
        align-items: center;
    }

    .navTilesToolbar .sapMTBSpacer {
        display: block;
    }

    .navTilesToolbar .exf-navtiles-tab-header {
        min-width: 14rem;
        max-width: none;
        flex: 1 1 14rem;
    }

    .navTilesToolbar .exf-navtiles-search {
        width: 14rem;
        min-width: 14rem;
        flex: 0 0 14rem;
    }
}

/* ColorPalette */
.exf-colorPalette {
    display: flex;
    margin: 0.5rem 0;
}

.exf-colorPalette.exf-colorPalette-Error {
    border: 0.125rem solid #b00;
    margin: 0.3rem 0;
    justify-content: center;
    width: 20px !important;
}
/* ui-5 upgrade fixes */

/* table width and table headings */
html.sapUiTheme-sap_fiori_3 .sapUxAPObjectPageSection .sapUxAPBlockContainer { padding: 0; }
html.sapUiTheme-sap_fiori_3 .sapUxAPObjectPageSectionTitle { border-bottom: .0625rem solid #0854a0; }
html.sapUiTheme-sap_fiori_3 .sapUxAPObjectPageSection { border-top: none; }
html.sapUiTheme-sap_fiori_3 .sapUxAPObjectPageSectionHeader { border-bottom: .0625rem solid #d9d9d9; }

/* navtiles margin to navbar */
html.sapUiTheme-sap_fiori_3 .exf-tiles > .sapMPanelHeadingDiv
{
  margin-top: 1rem;
}

/* panel title margin to navbar */
html.sapUiTheme-sap_fiori_3 .exf-panel .sapMPanelHdr{
  margin-top: 1rem;
}

/* context menu button styling */
html.sapUiTheme-sap_fiori_3 .sapMPopover .sapMBtnInner {
  border: none;
}

/* fix table background if not full width */
html.sapUiTheme-sap_fiori_3 .sapUiTableContentRow .sapUiTableCellDummy {
  background-color: var(--sapList_Background) !important;
}
/* ... */

